# desafio-rural-partners

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
src/apps/ruralpartners/: admin.py  apps.py  models.py
src/apps/ruralpartners/api/v1/: serializers.py  urls.py  views.py
src/apps/ruralpartners/management/commands/: createtesttoken.py
src/apps/ruralpartners/migrations/: 0001_initial.py  0002_seeding.py  0003_alter_ruralproperty_planted_cultures.py
src/core/: settings.py  urls.py
src/utils/: models.py  rest.py
tests/: conftest.py  settings.py  test_ping.py
tests/ruralpartners/: conftest.py
tests/ruralpartners/integration/: test_api_create_producers.py  test_api_create_rural_properties.py  test_api_delete_producers.py  test_api_delete_rural_properties.py  test_api_get_producers.py  test_api_get_rural_properties.py  test_api_rural_properties_stats.py  test_api_update_producers.py  test_api_update_rural_property.py
tests/ruralpartners/unit/: test_models.py
