[tool.poetry]
name = "rural-partners"
version = "0.1.0"
description = ""
authors = ["Mateus Ferreira <mateusasferreira28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
django-rest-framework = "^0.1.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
