[tool.poetry]
name = "rural-partners"
version = "0.1.0"
description = ""
authors = ["Mateus Ferreira <mateusasferreira28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
pytest = "^8.3.2"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.9"
pytest-django = "^4.8.0"
validate-docbr = "^1.10.0"
drf-spectacular = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
